Fixes #53 by adding a menu button on mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -52,3 +52,8 @@ footer a:hover {
   color: white;
   text-decoration: none;
 }
+
+nav #navCollapse {
+    margin-right: 0;
+    margin-left: auto;
+}
